# cryospax

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  codecov.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: release.yml
.github/workflows/: ci_build.yml
api/dataset/: index.html
api/simulate-particles/: index.html
cli/: index.html
cryojax_spa/: __init__.py  __main__.py  _simulate_particles.py
cryojax_spa/_dataset/: __init__.py  relion.py
cryospax/: __init__.py  __main__.py  _io.py  _misc.py  _simulate.py  _simulate_particles.py
cryospax/_dataset/: __init__.py  base_dataset.py  common.py  conversion.py  csparc.py  in_axes.py  relion.py
docs/: cli.md  index.md  overview.md
docs/api/: dataset.md  simulate-particles.md
docs/examples/: read-dataset.ipynb  simulate-particles.ipynb
docs/examples/data/: ribosome_4ug0_particles.star
examples/outputs/: particles.star
examples/read-dataset/: index.html
examples/simulate-particles/: index.html
faq/: index.html
overview/: index.html
tests/: conftest.py  test_cs_dataset.py  test_get_in_axes.py  test_relion_dataset.py  test_simulate_particles.py
tests/data/: img_00000.mrcs  test_csfile.cs  test_starfile.star
